@@ -1496,7 +1496,7 @@
 (defconst epackage-version "1.5"
   "Standard Emacs inversion.el supported verison number.")
 
-(defconst epackage--version-time "2012.0208.0644"
+(defconst epackage--version-time "2012.0208.0724"
   "Package's version number in format YYYY.MMDD.HHMM.")
 
 (defconst epackage--maintainer "jari.aalto@cante.net"
@@ -8901,6 +8901,18 @@ Summary, Version, Maintainer etc."
         "Can't documentation . Package not downloaded: %s"
         package))))))
 
+(put 'epackage-batch-setup 'lisp-indent-function 0)
+(put 'epackage-batch-setup 'edebug-form-spec '(body))
+(defmacro epackage-batch-setup (&rest args)
+  `(let (find-file-hook
+	 global-font-lock-mode
+	 vc-handled-backends   ;; Optimize: prevent loading VC for files.
+	 (debug-on-error t)
+	 debug-ignored-errors)
+     ,@args))
+
+(put 'epackage-interactive-initialize 'lisp-indent-function 0)
+(put 'epackage-interactive-initialize 'edebug-form-spec '(body))
 (defmacro epackage-interactive-initialize ()
   "Set function interactive status and call initialize."
   `(progn
@@ -9015,31 +9027,34 @@ Summary, Version, Maintainer etc."
 (defun epackage-batch-ui-list-downloaded-packages ()
   "List downloaded packages."
   (epackage-interactive-initialize)
-  (let ((list (epackage-status-downloaded-packages)))
-    (if (not list)
-        (epackage-princ "No packages downloaded.")
-      (epackage-princ "Downloaded packages:")
-      (epackage-batch-list-package-summary list))))
+  (epackage-batch-setup
+    (let ((list (epackage-status-downloaded-packages)))
+      (if (not list)
+	  (epackage-princ "No packages downloaded.")
+	(epackage-princ "Downloaded packages:")
+	(epackage-batch-list-package-summary list)))))
 
 ;;;###autoload
 (defun epackage-batch-ui-list-not-installed-packages ()
   "List downloaded packages that are not installed (enabled, activated)."
   (interactive)
-  (let ((list (epackage-status-not-installed-packages)))
-    (if (not list)
-        (epackage-princ "All downloaded packages are installed.")
-      (epackage-princ "Downloaded, but not enabled packages:")
-      (epackage-batch-list-package-summary list))))
+  (epackage-batch-setup
+    (let ((list (epackage-status-not-installed-packages)))
+      (if (not list)
+	  (epackage-princ "All downloaded packages are installed.")
+	(epackage-princ "Downloaded, but not enabled packages:")
+	(epackage-batch-list-package-summary list)))))
 
 ;;;###autoload
 (defun epackage-batch-ui-list-installed-packages ()
   "List installed packages."
   (interactive)
-  (let ((list (epackage-status-installed-packages)))
-    (if (not list)
-        (epackage-princ "No packages installed.")
-      (epackage-princ "Installed packages:")
-      (epackage-batch-list-package-summary list))))
+  (epackage-batch-setup
+    (let ((list (epackage-status-installed-packages)))
+      (if (not list)
+	  (epackage-princ "No packages installed.")
+	(epackage-princ "Installed packages:")
+	(epackage-batch-list-package-summary list)))))
 
 ;;;###autoload
 (defun epackage-batch-ui-list-available-packages ()
@@ -9107,54 +9122,63 @@ The arguments:
 
 (defun epackage-batch-enable-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-enable-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-enable-package elt 'verbose))))
 
 (defun epackage-batch-disable-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-enable-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-enable-package elt 'verbose))))
 
 (defun epackage-batch-activate-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-activate-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-activate-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-deactivate-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-deactivate-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-deactivate-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-clean-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-clean-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-clean-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-remove-package ()
   "Run `epackage-cmd-enable-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-remove-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-remove-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-download-package ()
   "Run `epackage-cmd-download-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-download-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-download-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-upgrade-package ()
   "Run `epackage-cmd-upgrade-package' for command line args."
-  (epackage-batch-ignore-errors-macro
-   (epackage-cmd-upgrade-package elt 'verbose)))
+  (epackage-batch-setup
+    (epackage-batch-ignore-errors-macro
+      (epackage-cmd-upgrade-package elt 'verbose))))
 
 ;;;###autoload
 (defun epackage-batch-upgrade-all-packages ()
   "Run `epackage-cmd-upgrade-packages-all'."
-  (epackage-initialize)
-  (epackage-cmd-upgrade-packages-all 'verbose))
+  (epackage-batch-setup
+    (epackage-initialize)
+    (epackage-cmd-upgrade-packages-all 'verbose)))
 
 (defun epackage-batch-ui-menu-selection (prompt)
   "Display UI menu PROMPT."
@@ -9232,41 +9256,39 @@ The arguments:
 
 (defun epackage-batch-ui-menu-run ()
   "Present an UI to run basic command."
-  (let ((epackage--install-action-list epackage--install-action-list)
-        (debug-on-error t)
-        (vc-handled-backends nil)
-        (loop t)
-        debug-ignored-errors
-        choice)
-    (epackage-initialize 'verbose)
-    (setq epackage--debug nil)
-    ;;  This is from command line, no enable action is needed for
-    ;;  current Emacs
-    (setq epackage--install-action-list
-          (delq 'enable epackage--install-action-list))
-    (epackage-batch-ui-menu-header)
-    (while loop
-      (epackage-batch-ui-menu-goto-point-max)
-      (setq choice (epackage-batch-ui-menu-selection
-		    epackage--batch-ui-menu-prompt))
-      (epackage-with-debug
-        (epackage-princ "debug: choice %s" choice))
-      (cond
-       ((null choice)
-        (epackage-princ "** Unknown selection"))
-       ((eq choice 'ignore)
-        (epackage-princ "** Not implmented yet"))
-       ((eq choice 'quit)
-        (epackage-princ "** Exit")
-        (setq loop nil))
-       ((functionp choice)
-        (call-interactively choice))
-       ((eq choice ?\?)
-	(epackage-batch-separator-insert)
-        (epackage-princ epackage--batch-ui-menu-help))
-       (t
-        (epackage-princ "** Unknown menu selection: %s" choice))))
-    (epackage-batch-ui-menu-goto-point-max)))
+  (epackage-batch-setup
+   (let ((epackage--install-action-list epackage--install-action-list)
+	 (loop t)
+	 choice)
+     (epackage-initialize 'verbose)
+     (setq epackage--debug nil)
+     ;;  This is from command line, no enable action is needed for
+     ;;  current Emacs
+     (setq epackage--install-action-list
+	   (delq 'enable epackage--install-action-list))
+     (epackage-batch-ui-menu-header)
+     (while loop
+       (epackage-batch-ui-menu-goto-point-max)
+       (setq choice (epackage-batch-ui-menu-selection
+		     epackage--batch-ui-menu-prompt))
+       (epackage-with-debug
+	 (epackage-princ "debug: choice %s" choice))
+       (cond
+	((null choice)
+	 (epackage-princ "** Unknown selection"))
+	((eq choice 'ignore)
+	 (epackage-princ "** Not implmented yet"))
+	((eq choice 'quit)
+	 (epackage-princ "** Exit")
+	 (setq loop nil))
+	((functionp choice)
+	 (call-interactively choice))
+	((eq choice ?\?)
+	 (epackage-batch-separator-insert)
+	 (epackage-princ epackage--batch-ui-menu-help))
+	(t
+	 (epackage-princ "** Unknown menu selection: %s" choice))))
+     (epackage-batch-ui-menu-goto-point-max))))
 
 (defun epackage-run-action-list (package actions &optional verbose)
   "Run PACKAGE ACTIONS. See `epackage--download-action-list'.
